--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "LeadFlow CRM",
+  "name": "Atlas - By Houzlook",
   "short_name": "LeadFlow",
   "description": "Lead Management CRM Application",
   "start_url": "/",
@@ -9,19 +9,19 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/favicon.ico",
+      "src": "/logo.svg",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/x-svg"
     },
     {
-      "src": "/pwa-192x192.png",
+      "src": "/logo.svg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/x-svg"
     },
     {
-      "src": "/pwa-512x512.png",
+      "src": "/logo.svg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/x-svg",
       "purpose": "any maskable"
     }
   ]
