--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Atlas - By Houzlook",
-  "short_name": "LeadFlow",
+  "short_name": "Atlas",
   "description": "Lead Management CRM Application",
   "start_url": "/",
   "display": "standalone",
